--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
@@ -65,7 +65,7 @@
                     </f:facet>
                     <h:outputText value="#{item.lp}"/>
                 </p:column>
-                <p:column width="240" sortable="true" sortBy="#{item.kontrahent}" filterBy="#{item.kontrahent}" filterFunction="contains">
+                <p:column width="240" sortable="true" sortBy="#{item.kontrahent}" filterBy="#{item.kontrahent}" filterMatchMode="contains">
                     <f:facet name="header">
                         <h:outputText value="kontrahent"/>
                     </f:facet>
