--- a/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
+++ b/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
@@ -7,7 +7,8 @@
 
     xmlns:bcf="http://brzaskun.com/facelets"
     >
-    <p:dialog id="dialogkartawynagrodzen" header="Karta wynagrodzeń" widgetVar="dialogkartawynagrodzen"  appendTo="akordeon:KartyWynangrodzenPITForm" fitViewport="true"
+    <p:dialog id="dialogkartawynagrodzen" header="Karta wynagrodzeń" widgetVar="dialogkartawynagrodzen"  
+              appendTo="akordeon" fitViewport="true"
                
               resizable="false"  onShow="ustawdialog('dialogkartawynagrodzen','centertile',1650,700);" closeOnEscape="true" onHide="resetujdialog('dialogkartawynagrodzen');" 
               >
