--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -118,7 +118,7 @@
                             <h:outputText value="us"/>
                         </f:facet>
                         <p:commandButton icon="pi pi-envelope" actionListener="#{pitWysylkaView.robPIT1129(itempity44)}" update="@parent:@parent" 
-                                         rendered="#{podpisView.jestkarta eq true and itempity44.przekroczenie eq false}">
+                                         rendered="#{podpisView.jestkarta eq true and itempity44.przekroczenie eq false and itempity44.status eq null}">
                             <p:confirm type="popup" header="Potwierdzenie" message="Wysłać deklarację do urzędu?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
@@ -135,7 +135,8 @@
                             <h:outputText value=""/>
                         </f:facet>
                         <p:commandButton icon="pi pi-trash" actionListener="#{kartaWynagrodzenView.usunPIT11(itempity44)}" 
-                                         update="akordeon:wystawionepit11 akordeon:KartyWynangrodzenPITForm" rendered="#{itempity44.status eq null or itempity44.status ne '200'}">
+                                         update="akordeon:wystawionepit11 akordeon:KartyWynangrodzenPITForm" 
+                                         rendered="#{itempity44.status eq null or itempity44.status ne '200'}">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć deklaracje?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
