--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -126,7 +126,8 @@
                         <f:facet name="header">
                             <h:outputText value="upo"/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-cloud-download" actionListener="#{pitWysylkaView.pobierztest(itempity44)}" update="@parent:@parent"  rendered="#{itempity44.status ne null and itempity44.status ne '200'}">
+                        <p:commandButton icon="pi pi-cloud-download" actionListener="#{pitWysylkaView.pobierztest(itempity44)}" 
+                                         update="@parent:@parent"  rendered="#{itempity44.status ne null and itempity44.status ne '200'}">
                             <p:confirm type="popup" header="Potwierdzenie" message="Pobrać UPO?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
