--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -123,6 +123,12 @@
                     <bcf:outputpl value="#{wpis.dokument.bruttoFakturaViewPLN}" rendered="#{wpis.dokument.walutafaktury ne 'PLN'}"/>
                     <h:outputText value=" PLN" rendered="#{wpis.dokument.walutafaktury ne 'PLN'}" style="color: "/>
                 </p:column>
+                <p:column headerText="24" width="20" sortBy="#{wpis.klientzaakceptowal}"  filterBy="#{wpis.klientzaakceptowal}" style="text-align: center;">  
+                    <h:outputText value="&#x2713;" style="color: #0066ff; font-weight: 900;" rendered="#{wpis.klientzaakceptowal}"/>
+                </p:column>
+                 <p:column headerText="rn" width="20" sortBy="#{wpis.wygenerowanoroknastepny}"  filterBy="#{wpis.wygenerowanoroknastepny}" style="text-align: center;">  
+                     <h:outputText value="&#x2713;" style="color: #0066ff; font-weight: 900;" rendered="#{wpis.wygenerowanoroknastepny}"/>
+                </p:column>
                 <p:column headerText="01" width="20" sortBy="#{wpis.m1}"  filterBy="#{wpis.m1}">  
                     <h:outputText value="#{wpis.m1}" styleClass="#{wpis.m1 gt 0 ? 'wiecejfaktur' : 'zerofaktur'}"/>
                 </p:column>
