--- a/kadry/src/main/webapp/pit/sub/info.xhtml
+++ b/kadry/src/main/webapp/pit/sub/info.xhtml
@@ -40,8 +40,8 @@
                         <f:facet name="header">
                             <h:outputText value="firma"/>
                         </f:facet>
-                        <h:outputText value="#{itempity22.firma.nazwa}" rendered="#{itempity22.pozostalo gt 0}"/>
-                        <h:outputText value="#{itempity22.firma.nazwa}" rendered="#{itempity22.pozostalo eq 0}" style="color: lightgray;"/>
+                        <h:outputText value="#{itempity22.firma.firmaNazwa}" rendered="#{itempity22.pozostalo gt 0}"/>
+                        <h:outputText value="#{itempity22.firma.firmaNazwa}" rendered="#{itempity22.pozostalo eq 0}" style="color: #136e13;"/>
                     </p:column>
                     <p:column width="50" style="text-align: center;">
                         <f:facet name="header">
